# sparseconvnet

./: CMakeLists.txt  README.md
src/: DataConfig.cpp  DataConfig.h  SparseConvNet.cpp  SparseConvNet.h  main.cpp
